# HealthMonitoring

./: CMakeLists.txt  app.cpp  app_v1.cpp  app_v2.cpp  killer_v2.cpp
controllers/init/: health_monitoring_init.cpp  health_monitoring_init.h  init_abstract.h  init_returnType.h
controllers/run/: health_monitoring_run.cpp  health_monitoring_run.h  run_abstract.h
controllers/shutdown/: shutdown.cpp  shutdown.h  shutdown_returnType.h
file_writer/: file_writer.cpp  file_writer.h
manifest/: manifest.json
manifest/manager/: manifest_manager.cpp  manifest_manager.h
manifest/metadata/: delay_info.cpp  delay_info.h  file_info.cpp  file_info.h  manifest_types.h  text_info.cpp  text_info.h
